--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint ./ --fix"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "framer-motion": "^3.2.2-rc.1",
     "next": "latest",
     "prop-types": "^15.7.2",
@@ -20,12 +21,14 @@
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.8.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.18.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "webpack": "^5.30.0"
   },
   "license": "MIT"
 }
