--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint ./ --fix"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.0",
     "axios": "^0.21.1",
     "framer-motion": "^3.2.2-rc.1",
     "next": "latest",
     "prop-types": "^15.7.2",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-is": "^16.8.0",
     "react-lottie": "^1.2.3",
     "styled-components": "^5.0.0"
